--- a/Nara/전처리/전처리.ipynb
+++ b/Nara/전처리/전처리.ipynb
@@ -2,251 +2,100 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('./news_data.csv' ,index_col=0)\n",
-    "nt = pd.read_csv('./nation.csv')\n",
-    "nt1 = nt['list'].tolist()\n"
+    "df = pd.read_csv('./news_data.csv')\n",
+    "nt = pd.read_csv('./nation.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>writer</th>\n",
-       "      <th>content</th>\n",
-       "      <th>writed_at</th>\n",
-       "      <th>url</th>\n",
-       "      <th>main_category</th>\n",
-       "      <th>sub_category</th>\n",
-       "      <th>platform</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>news_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1128869</th>\n",
-       "      <td>쿠데타 2주년 맞은 미얀마 군정, 국가비상사태 연장···“특수 상황 끝나지 않아”</td>\n",
-       "      <td>선명수 기자</td>\n",
-       "      <td>쿠데타 2년을 맞은 미얀마 군사정권이 국가비상사태를 연장해 군정 강화에 나섰다. 미...</td>\n",
-       "      <td>2023-02-01 23:27:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>세계</td>\n",
-       "      <td>아시아/호주</td>\n",
-       "      <td>네이버</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1128871</th>\n",
-       "      <td>약속 깬 미얀마 군정, 국가비상사태 6개월 연장</td>\n",
-       "      <td>김철오 기자</td>\n",
-       "      <td>미얀마 군사정권이 국가비상사태를 연장했다. 쿠데타 수장인 민 아웅 흘라잉 최고사령관...</td>\n",
-       "      <td>2023-02-01 23:24:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>세계</td>\n",
-       "      <td>아시아/호주</td>\n",
-       "      <td>네이버</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1128873</th>\n",
-       "      <td>[뉴욕 개장] 연준 금리 발표 앞두고 하락 출발</td>\n",
-       "      <td>최서윤 기자</td>\n",
-       "      <td>(서울=뉴스1) 최서윤 기자 = 미 중앙은행(FRB·연준)의 금리 인상 발표를 앞둔...</td>\n",
-       "      <td>2023-02-01 23:44:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>세계</td>\n",
-       "      <td>미국/중남미</td>\n",
-       "      <td>네이버</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1129523</th>\n",
-       "      <td>'세계 최대' 노르웨이 국부펀드, 지난해 200조원 손실 기록</td>\n",
-       "      <td>이종희 기자</td>\n",
-       "      <td>[서울=뉴시스] 이종희 기자 = 세계 최대 규모인 노르웨이 국부펀드가 우크라이나 전...</td>\n",
-       "      <td>2023-02-01 16:48:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>세계</td>\n",
-       "      <td>유럽</td>\n",
-       "      <td>네이버</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1129524</th>\n",
-       "      <td>노벨평화상 후보 마감…'反푸틴·우크라전' 대거 포진</td>\n",
-       "      <td>신정원 기자</td>\n",
-       "      <td>[서울=뉴시스]신정원 기자 = 올해 노벨평화상 후보에도 우크라이나 전쟁과 관련한 반...</td>\n",
-       "      <td>2023-02-01 16:57:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>세계</td>\n",
-       "      <td>유럽</td>\n",
-       "      <td>네이버</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1274434</th>\n",
-       "      <td>런던 리버버스 탑승한 오세훈 서울시장</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>(런던=연합뉴스) 오세훈 서울시장이 13일(현지시간) 영국 런던 템스강에서 런던의 ...</td>\n",
-       "      <td>2023-03-14 10:05:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>세계</td>\n",
-       "      <td>유럽</td>\n",
-       "      <td>네이버</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1274435</th>\n",
-       "      <td>러 \"한국 등과 항공운항 재개 추진\"…작년 3월부터 중단</td>\n",
-       "      <td>유철종 기자</td>\n",
-       "      <td>(서울=연합뉴스) 유철종 기자 = 러시아 항공 당국이 지난해 초부터 중단된 한국과의...</td>\n",
-       "      <td>2023-03-14 10:14:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>세계</td>\n",
-       "      <td>유럽</td>\n",
-       "      <td>네이버</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1274466</th>\n",
-       "      <td>뼛속까지 태우는 '소이탄 비' 우크라 주택가에 쏟아졌다</td>\n",
-       "      <td>박지현 기자</td>\n",
-       "      <td>[파이낸셜뉴스] 러시아·우크라이나 전쟁이 끝없이 이어지고 있는 가운데 지난 11일(...</td>\n",
-       "      <td>2023-03-14 10:44:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>세계</td>\n",
-       "      <td>유럽</td>\n",
-       "      <td>네이버</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1274468</th>\n",
-       "      <td>콜 드롭스 야드 및 킹스크로스역 방문한 오세훈 시장</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>(서울=연합뉴스) 오세훈 서울시장이 13일(현지시간) 영국 런던의 도심개발 현장인 ...</td>\n",
-       "      <td>2023-03-14 10:45:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>세계</td>\n",
-       "      <td>유럽</td>\n",
-       "      <td>네이버</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1274469</th>\n",
-       "      <td>“불꽃놀이 아니고 ‘악마의 비’였다”…마을 초토화시킨 이 녀석 정체</td>\n",
-       "      <td>이상규 기자</td>\n",
-       "      <td>우크라이나 동남부 도시 불레다르에서 지난해 2월 24일 러시아 침공 이래 최대의 탱...</td>\n",
-       "      <td>2023-03-14 10:49:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>세계</td>\n",
-       "      <td>유럽</td>\n",
-       "      <td>네이버</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>41177 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 title  writer  \\\n",
-       "news_id                                                          \n",
-       "1128869  쿠데타 2주년 맞은 미얀마 군정, 국가비상사태 연장···“특수 상황 끝나지 않아”  선명수 기자   \n",
-       "1128871                     약속 깬 미얀마 군정, 국가비상사태 6개월 연장  김철오 기자   \n",
-       "1128873                     [뉴욕 개장] 연준 금리 발표 앞두고 하락 출발  최서윤 기자   \n",
-       "1129523             '세계 최대' 노르웨이 국부펀드, 지난해 200조원 손실 기록  이종희 기자   \n",
-       "1129524                   노벨평화상 후보 마감…'反푸틴·우크라전' 대거 포진  신정원 기자   \n",
-       "...                                                ...     ...   \n",
-       "1274434                           런던 리버버스 탑승한 오세훈 서울시장     NaN   \n",
-       "1274435                러 \"한국 등과 항공운항 재개 추진\"…작년 3월부터 중단  유철종 기자   \n",
-       "1274466                 뼛속까지 태우는 '소이탄 비' 우크라 주택가에 쏟아졌다  박지현 기자   \n",
-       "1274468                   콜 드롭스 야드 및 킹스크로스역 방문한 오세훈 시장     NaN   \n",
-       "1274469          “불꽃놀이 아니고 ‘악마의 비’였다”…마을 초토화시킨 이 녀석 정체  이상규 기자   \n",
-       "\n",
-       "                                                   content  \\\n",
-       "news_id                                                      \n",
-       "1128869  쿠데타 2년을 맞은 미얀마 군사정권이 국가비상사태를 연장해 군정 강화에 나섰다. 미...   \n",
-       "1128871  미얀마 군사정권이 국가비상사태를 연장했다. 쿠데타 수장인 민 아웅 흘라잉 최고사령관...   \n",
-       "1128873  (서울=뉴스1) 최서윤 기자 = 미 중앙은행(FRB·연준)의 금리 인상 발표를 앞둔...   \n",
-       "1129523  [서울=뉴시스] 이종희 기자 = 세계 최대 규모인 노르웨이 국부펀드가 우크라이나 전...   \n",
-       "1129524  [서울=뉴시스]신정원 기자 = 올해 노벨평화상 후보에도 우크라이나 전쟁과 관련한 반...   \n",
-       "...                                                    ...   \n",
-       "1274434  (런던=연합뉴스) 오세훈 서울시장이 13일(현지시간) 영국 런던 템스강에서 런던의 ...   \n",
-       "1274435  (서울=연합뉴스) 유철종 기자 = 러시아 항공 당국이 지난해 초부터 중단된 한국과의...   \n",
-       "1274466  [파이낸셜뉴스] 러시아·우크라이나 전쟁이 끝없이 이어지고 있는 가운데 지난 11일(...   \n",
-       "1274468  (서울=연합뉴스) 오세훈 서울시장이 13일(현지시간) 영국 런던의 도심개발 현장인 ...   \n",
-       "1274469  우크라이나 동남부 도시 불레다르에서 지난해 2월 24일 러시아 침공 이래 최대의 탱...   \n",
-       "\n",
-       "                   writed_at  url main_category sub_category platform  \n",
-       "news_id                                                                \n",
-       "1128869  2023-02-01 23:27:00  NaN            세계       아시아/호주      네이버  \n",
-       "1128871  2023-02-01 23:24:00  NaN            세계       아시아/호주      네이버  \n",
-       "1128873  2023-02-01 23:44:00  NaN            세계       미국/중남미      네이버  \n",
-       "1129523  2023-02-01 16:48:00  NaN            세계           유럽      네이버  \n",
-       "1129524  2023-02-01 16:57:00  NaN            세계           유럽      네이버  \n",
-       "...                      ...  ...           ...          ...      ...  \n",
-       "1274434  2023-03-14 10:05:00  NaN            세계           유럽      네이버  \n",
-       "1274435  2023-03-14 10:14:00  NaN            세계           유럽      네이버  \n",
-       "1274466  2023-03-14 10:44:00  NaN            세계           유럽      네이버  \n",
-       "1274468  2023-03-14 10:45:00  NaN            세계           유럽      네이버  \n",
-       "1274469  2023-03-14 10:49:00  NaN            세계           유럽      네이버  \n",
-       "\n",
-       "[41177 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# colums (title, content, wirteda_at, sub_category)\n"
+    "# colums (title, content, wirteda_at, sub_category)\n",
+    "df_ne = df.drop(['news_id','writer','url','main_category','platform'], axis=1)\n",
+    "df_ne = df_ne.dropna()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ne['content'] = df_ne['content'].apply(lambda x : re.sub('((\\(|\\[).*\\=.*(\\]|\\)).*?\\= )','',x))  #[서울=뉴시스]신정원 기자 =\n",
+    "df_ne['content'] = df_ne['content'].apply(lambda x : re.sub('\\(사진=[^)]+\\)','',x)) # (사진=블라블라)\n",
+    "df_ne['content'] = df_ne['content'].apply(lambda x : re.sub('\\(현지시간\\)','',x)) # (현지시간)\n",
+    "df_ne['content'] = df_ne['content'].apply(lambda x : re.sub('\\[|\\]|\\(|\\)','',x)) #[, ], (, )\n",
+    "df_ne['content'] = df_ne['content'].apply(lambda x : re.sub('[가-힣A-z]+\\=[가-힣A-z/0-9]+','',x))\n",
+    "\n",
+    "#로이터=뉴스1\n",
+    "#뉴델리=연합뉴스\n",
+    "#마닐라=AP/뉴시스\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "news_list = df_ne.values.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from summa.summarizer  import summarize\n",
+    "new_sum_list = [news_list[n][1] if summarize(news_list[n][1], words=20) == '' else summarize(news_list[n][1], words=20) for n in range(len(news_list))]\n",
+    "df_ne['content'] = new_sum_list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_ne[(df_ne['title'].str.contains('\\[사진\\]'))&(df_ne['content'].str.len() <= 10)]\n",
+    "# df_ne[(df_ne['title'].str.contains('\\[사진\\]'))]\n",
+    "# df_ne[((df_ne['content'].str.len() <= 20))]\n",
+    "\n",
+    "df_ne = df_ne.drop(df_ne[df_ne['content'].str.len() <= 4].index)\n",
+    "df_ne = df_ne.drop(df_ne[(df_ne['content'].str.contains('파이낸셜뉴스'))].index)\n",
+    "df_ne = df_ne.drop(df_ne[(df_ne['content'].str.contains('블룸버그는'))].index)\n",
+    "df_ne = df_ne.drop(df_ne[(df_ne['content'].str.contains('전진영 기자 jintonic@'))].index)\n",
+    "df_ne = df_ne.drop(df_ne[(df_ne['content'].str.contains('자세한 내용 이어집니다.'))].index)\n",
+    "df_ne = df_ne.drop(df_ne[(df_ne['content'].str.contains('데일리안 = 데스크 by.\\n한가마'))].index)\n",
+    "df_ne = df_ne.drop(df_ne[(df_ne['title'].str.contains('홍콩, 하락세 홍콩달러 매수 시장개입...\"3개월 만에 6800억원 투입'))].index)\n",
+    "df_ne.reset_index(drop=True, inplace=True)\n",
+    "df_ne.rename(columns={'content':'summa_content'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ne.to_csv('final_data.csv', index=False)"
    ]
   },
   {
