--- a/Nara/전처리/jo.ipynb
+++ b/Nara/전처리/jo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,56 +67,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1 주차 count : ex) {미국 : 153, 러시아: 135, 우크라이나 : 112}\n",
-    "# 조건식으로 미국(), 러시아(), 우크라이나()\n",
-    "\n",
-    "add_list = ['西', '대한민국', '한국', '한', '韓', '미합중국', '미국', '미', '美', '일본', '일', '日', '중국', '중화인민공화국', '중', '中','프랑스', '프', '독일', '독', '獨', '러시아', '러', '영국', '영', '英']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "country_list = nt['list'].tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for n in range(len(add_list)) :\n",
-    "    nt = nt.append({'list' : add_list[n]} , ignore_index= True)\n",
-    "\n",
-    "nt.drop_duplicates(inplace=True)\n",
-    "\n",
     "country_list = nt['list'].to_list()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
     "from konlpy.tag import Mecab\n",
     "    \n",
-    "    \n",
-    "def get_words2(txt):\n",
-    "\n",
-    "    mecab = Mecab()\n",
-    "\n",
-    "    return [t for t in mecab.pos(txt)]\n",
-    "\n",
-    "# 토큰화 \n",
-    "\n",
     "def get_words(txt):\n",
     "\n",
     "    mecab = Mecab()\n",
@@ -125,26 +90,21 @@
     "\n",
     "def get_country(word_list) :\n",
     "\n",
-    "\n",
     "    count_dict = {}\n",
     "    for word in word_list:\n",
     "        if word in country_list:\n",
+    "            if word == '대한민국':\n",
+    "                word = '한국'\n",
+    "            if word == '우크라':\n",
+    "                word = '우크라이나'\n",
     "            count_dict.setdefault(word , 0)\n",
     "            count_dict[word] += 1\n",
     "\n",
-    "    # 토큰별로 빈도수 카운팅\n",
-    "    count_dict = {}    \n",
-    "    for word in word_list:\n",
-    "        if word in country_list:\n",
-    "            count_dict.setdefault(word , 0)\n",
-    "            count_dict[word] +=1\n",
-    "\n",
-    "\n",
     "    return count_dict\n",
+    "\n",
     "\n",
     "def count_country(txt1, txt2):\n",
     "\n",
-    "    \n",
     "    words = get_words(txt1) + get_words(txt2)\n",
     "    count = get_country(words)\n",
     "    if not count:\n",
@@ -152,6 +112,7 @@
     "    max(count.values())\n",
     "    max_list = max(count.values()) \n",
     "    max_keys = [key for key, value in count.items() if value == max_list]\n",
+    "\n",
     "\n",
     "    return max_keys\n",
     "\n",
@@ -163,30 +124,89 @@
     "        country_dict.setdefault(country, 0)\n",
     "        country_dict[country] += 1\n",
     "        sorted_dict = sorted(country_dict.items(), key=lambda x: x[1], reverse=True)\n",
+    "        \n",
     "    return sorted_dict\n",
     "\n",
+    "def top_country(df_list):\n",
     "\n",
-    "#By 강의록"
+    "    count_list = []\n",
+    "\n",
+    "    for n in range(len(df_list)):\n",
+    "            c = count_country(df_list[n][0], df_list[n][1])\n",
+    "            count_list.extend(c)\n",
+    "\n",
+    "    results = country_count(count_list)\n",
+    "    top3 = [results[0], results[1], results[2]]\n",
+    "\n",
+    "    return top3\n",
+    "\n",
+    "def news_dict__(df_list):\n",
+    "    \n",
+    "    news_dict = {}\n",
+    "    for m in range(len(df_list)):\n",
+    "        for country in get_country(get_words(df_list[m][1])) :\n",
+    "            news_dict.setdefault(country , [])\n",
+    "            news_dict[country].append(df_list[m][1])\n",
+    "        \n",
+    "    return news_dict\n",
+    "\n",
+    "\n",
+    "def top_country_news(df_list):\n",
+    "    \n",
+    "    t_news_dict = {}\n",
+    "    top3 = top_country(df_list)\n",
+    "    news_dict_ = news_dict__(df_list)\n",
+    "    t_country = [top3[0][0], top3[0][0], top3[0][0]]\n",
+    "    t_news_dict[t_country[0]] = news_dict_[t_country[0]]\n",
+    "    t_news_dict[t_country[1]] = news_dict_[t_country[1]]\n",
+    "    t_news_dict[t_country[2]] = news_dict_[t_country[2]]\n",
+    "\n",
+    "    \n",
+    "    return t_news_dict\n",
+    "\n",
+    "\n",
+    "def keyword():\n",
+    "    return\n",
+    "\n",
+    "def rep_news():\n",
+    "    return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "finally_results = []\n",
+    "finally_results_d = {}\n",
+    "\n",
     "for n in range(len(results)):\n",
     "    week_counts = []\n",
-    "    for m in range(len(results['{}주차'.format(n+1)])) :\n",
+    "    for m in range(len(results['{}주차'.format(n+1)])):\n",
     "        c = count_country(results['{}주차'.format(n+1)][m][0], results['{}주차'.format(n+1)][m][1])\n",
     "        week_counts.extend(c)\n",
     "    finally_results.append(week_counts)\n",
     "\n",
-    "\n",
-    "finally_results_d = {}\n",
     "for n in range(len(finally_results)):\n",
-    "    finally_results_d['{}주차'.format(n+1)] = country_count(finally_results[n])"
+    "    finally_results_d['{}주차'.format(n+1)] = country_count(finally_results[n])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "news_dict = {}\n",
+    "for m in range(len(results)):\n",
+    "    weeks_dict = {}\n",
+    "    for n in range(len(results['{}주차'.format(m+1)])) :\n",
+    "        if get_country(get_words(results['{}주차'.format(m+1)][n][1])):\n",
+    "            for country in get_country(get_words(results['{}주차'.format(m+1)][n][1])).keys() :\n",
+    "                weeks_dict.setdefault(country , [])\n",
+    "                weeks_dict[country].append(results['{}주차'.format(m+1)][n][1])\n",
+    "    news_dict['{}주차'.format(m+1)] = weeks_dict\n"
    ]
   },
   {
@@ -195,7 +215,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "finally_results_d['2주차']"
+    "# 해야할일\n",
+    "# 0. 키워드, 토픽 추출\n",
+    "# 1. 코드를 범용화.\n",
+    "# 2. html 에 적용.\n",
+    "# 3. 크롤링한거에 적용..\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = top_country(results['1주차'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'우크라이나'"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[2][0]"
    ]
   },
   {
@@ -203,7 +256,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "news_dict__(results['1주차'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df [title, content, writed_at]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tt = top_country_news(results['1주차'])"
+   ]
   }
  ],
  "metadata": {
