--- a/Nara/전처리/전처리.ipynb
+++ b/Nara/전처리/전처리.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,13 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_ne['content'] = df_ne['content'].apply(lambda x : re.sub('((\\(|\\[).*\\=.*(\\]|\\)).*?\\= )','',x))  #[서울=뉴시스]신정원 기자 =\n",
     "df_ne['content'] = df_ne['content'].apply(lambda x : re.sub('\\(사진=[^)]+\\)','',x)) # (사진=블라블라)\n",
     "df_ne['content'] = df_ne['content'].apply(lambda x : re.sub('\\(현지시간\\)','',x)) # (현지시간)\n",
+    "df_ne['content'] = df_ne['content'].apply(lambda x : re.sub('\\(한국시간\\)','',x)) # (한국시간)\n",
+    "df_ne['content'] = df_ne['content'].apply(lambda x : re.sub('한국시각','',x)) # 한국시각\n",
     "df_ne['content'] = df_ne['content'].apply(lambda x : re.sub('\\[|\\]|\\(|\\)','',x)) #[, ], (, )\n",
     "df_ne['content'] = df_ne['content'].apply(lambda x : re.sub('[가-힣A-z]+\\=[가-힣A-z/0-9]+','',x))\n",
     "\n",
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,24 +88,19 @@
     "df_ne = df_ne.drop(df_ne[(df_ne['content'].str.contains('데일리안 = 데스크 by.\\n한가마'))].index)\n",
     "df_ne = df_ne.drop(df_ne[(df_ne['title'].str.contains('홍콩, 하락세 홍콩달러 매수 시장개입...\"3개월 만에 6800억원 투입'))].index)\n",
     "df_ne.reset_index(drop=True, inplace=True)\n",
-    "df_ne.rename(columns={'content':'summa_content'}, inplace=True)"
+    "df_ne.rename(columns={'content':'summa_content'}, inplace=True)\n",
+    "df_ne.drop_duplicates(subset='summa_content', inplace=True)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_ne.to_csv('final_data.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
